# gen-agentic-ai

./: .gitignore
Learning-gen-ai-course/: chat.py  main.py  pyproject.toml  requirements.txt  universal_chat.py
Learning-gen-ai-course/chat_models/: chat.py  universal_chat.py
Learning-gen-ai-course/rag_project/document_loader/: linix_and_shell.txt  test.py
ai-sql-tool/: .env.example  README.md  app.py  requirements.txt  sample_schema.sql
ai-sql-tool/db/: connection.py  schema_loader.py
ai-sql-tool/llm/: groq_client.py  prompt_templates.py
ai-sql-tool/services/: query_executor.py  sql_generator.py  validator.py
ai-sql-tool/ui/: components.py
ai-sql-tool/utils/: helpers.py
